--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ code > span.al { color: #ff0000; font-weight: bold; }
 code > span.fu { color: #06287e; }
 code > span.er { color: #ff0000; font-weight: bold; }
   </style>
-  <link rel="stylesheet" href="doc/style.css" type="text/css" />
+  <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
 <h1>Optimizer2 Guide</h1>
